--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
 <script src="main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
  <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script></head>
-<body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-167981579-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-167981579-1');
+</script>
+
+ <body>
     <div class="field is-grouped container"  style="max-width: 1000px; margin-top: 100px;">
         <p class="control is-expanded">
           <input class="input" type="text"  name="user1" id="user1" placeholder="user-1 handle">
