--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>  
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
+    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">-->
+	<link rel="stylesheet" href="main.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 <script src="main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
@@ -17,27 +18,15 @@
 </script>
 
  <body>
-    <div class="field is-grouped container"  style="max-width: 1000px; margin-top: 100px;">
-        <p class="control is-expanded">
-          <input class="input" type="text"  name="user1" id="user1" placeholder="user-1 handle">
-        </p>
-        <!-- <p class="control is-expanded">
-            <input class="input" type="text" name="user2" id="user2" placeholder="user-2 handle">
-        </p> -->
-        <p class="control">
-          <a class="button" onclick="loadDetail()">
-            Add User Handle
-          </a>
-        </p>
-      </div>
-      <br><br>
-      <div class="container has-text-centered">
-        <!-- <button class="button" onCLick="showChart()">Show the graph</button>    -->
-        <div id="chartContainer" style="height:700px">
-      </div>
-    <!-- <button onclick="loadDetail()" class="button is-primary">click me</button> -->
-    </div>
-
+	<div class="big-text text-centered margined white-text" style="margin-bottom:0;">Codeforces Graph Comparator</div>
+    <form class="hor-padding padd-border flex margined" id="donotsubmit">
+        <input class="input flexy hor-margin" type="text"  name="user1" id="user1" placeholder="Add Single or Multiple handles seperated by ',' ">
+        <input type="submit" value="Add to Graph">
+    </form>
+	<div class="container centered">
+		<div id="chartContainer" style="max-height:50vh;">
+	</div>
+	<div id="notif-container"><!--DO NOT DELETE THIS ELEMENT--></div>
 
 
 <!-- <canvas id="myChart" style="max-width:800px; max-height:600px;"></canvas> -->
