--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>  
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-<script src="main.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+  <script src="main.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
  <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script></head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167981579-1"></script>
@@ -17,13 +17,39 @@
 </script>
 
  <body>
-    <div class="field is-grouped container"  style="max-width: 1000px; margin-top: 100px;">
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="index.html">
+        <h1 class="title">okCoder</h1>
+      </a>
+  
+      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
+  
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item" href="index.html">
+          Home
+        </a>      
+        <a class="navbar-item" href="index.html">
+          Comparator
+        </a>
+        <a class="navbar-item" href="user.html">
+          Progress
+        </a>
+        <a class="navbar-item" >
+          About us
+        </a>
+    </div>
+</nav>
+    <div class="field is-grouped container"  style="max-width: 1000px; margin-top: 40px;">
         <p class="control is-expanded">
           <input class="input" type="text"  name="user1" id="user1" placeholder="user-1 handle">
         </p>
-        <!-- <p class="control is-expanded">
-            <input class="input" type="text" name="user2" id="user2" placeholder="user-2 handle">
-        </p> -->
         <p class="control">
           <a class="button" onclick="loadDetail()">
             Add User Handle
@@ -31,16 +57,10 @@
         </p>
       </div>
       <br><br>
-      <div class="container has-text-centered">
-        <!-- <button class="button" onCLick="showChart()">Show the graph</button>    -->
+      <div class="container">
         <div id="chartContainer" style="height:700px">
       </div>
-    <!-- <button onclick="loadDetail()" class="button is-primary">click me</button> -->
     </div>
-
-
-
-<!-- <canvas id="myChart" style="max-width:800px; max-height:600px;"></canvas> -->
 </body>
 
 </html>
